try to remove space

--- a/views/show.erb
+++ b/views/show.erb
@@ -7,19 +7,16 @@
         <%= seg["speaker_label"] %>
       </div>
       <div class="said">
-        <% seg["items"].each_with_index do |item| %>
-
-          <% loop do %>
-            <% if @transcript["results"]["items"][idx]["start_time"] %>
-              <span class="word">
-                <%= @transcript["results"]["items"][idx]["alternatives"][0]["content"] %>
-              </span>
-              <% idx += 1 %>
-              <% break %>
-            <% end %>
-            <% idx += 1 %>
-          <% end %>
-        <% end %><span class="last">。</span>
+<% seg["items"].each_with_index do |item| %>
+<% loop do %>
+<% if @transcript["results"]["items"][idx]["start_time"] %>
+<span class="word"><%= @transcript["results"]["items"][idx]["alternatives"][0]["content"] %></span>
+<% idx += 1 %>
+<% break %>
+<% end %>
+<% idx += 1 %>
+<% end %>
+<% end %><span class="last">。</span>
       </div>
     </div>
   <% end %>
